--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,11 @@ author: Wenrui Zhao
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
   Work Experience: "work"
+  Skills: "skills"
+  Other Experiences: "others"
+  My Life: "life"
+
 
 ################
 # --- Logo --- #
