--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ navbar-links:
   About Me: "aboutme"
   Work Experience: "work"
   Skills: "skills"
-  Other Experiences: "others"
-  My Life: "life"
+  Other Experience: "others"
+  Life: "life"
 
 
 ################
