--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ navbar-links:
   About Me: "aboutme"
   Work Experience: "work"
   Skills: "skills"
-  Other Experience: "others"
-  Life: "life"
+  Awards: "others"
+  My Life: "life"
 
 
 ################
